[package]
name = "iroh-willow"
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "willow protocol implementation for iroh"
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.77"
